﻿2019-10-20
==========
    1. Release 3.0.

2019-11-22
==========
    1. Updated project structure.
    
2019-11-25
==========
    1. Reorganized solutions.
    
2020-11-14
==========
    1. Huge dev refactoring.

2021-03-01
==========
    1. Resurrection.