@@ -1,7 +1,7 @@
 ﻿2019-12-20
 ==========
-    1. [TauCode.Db problem] If a SQLite table creation script has e.g. VARCHAR(20) instead of (valid) TEXT, a truncation exception will be thrown.
+X   1. [TauCode.Db problem] If a SQLite table creation script has e.g. VARCHAR(20) instead of (valid) TEXT, a truncation exception will be thrown.
 
 2020-10-09
 ==========
-    1. Domain with GUID and int ID-s, what then? (GUID-s are not always good for ID-s, sometimes auto-increment /long/ int would be far better).
++   1. Domain with GUID and int ID-s, what then? (GUID-s are not always good for ID-s, sometimes auto-increment /long/ int would be far better).
