@@ -2,15 +2,18 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>TauCode.Domain</id>
-    <version>1.3.2.7-dev-2021-03-01-19-35</version>
+    <version>1.3.2.7-dev-2021-04-17-19-37</version>
     <authors>TauCode</authors>
     <owners>TauCode</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="file">LICENSE.txt</license>
     <projectUrl>https://github.com/taucode/taucode.domain</projectUrl>
-    <description>Basic TauCode domain-aware functionality</description>
+    <repository type="git" url="https://github.com/taucode/taucode.domain"/>
+    <description>
+      Basic TauCode domain-aware functionality
+    </description>
     <releaseNotes>
-      Resurrection.
+      Got rid of GUID-based 'Identity'.
     </releaseNotes>
     <tags>taucode domain</tags>
     <dependencies>
