@@ -1,9 +1,0 @@
-﻿using System;
-
-namespace TauCode.Domain.Identities
-{
-    public interface IId
-    {
-        Guid Id { get; }
-    }
-}
