@@ -1,0 +1,19 @@
+﻿using NUnit.Framework;
+
+namespace TauCode.Domain.Tests
+{
+    [TestFixture]
+    public class DomainDummyFixture
+    {
+        [Test]
+        public void DomainDummyTest()
+        {
+            // Arrange
+
+            // Act
+
+            // Assert
+            Assert.Pass("Added for CI/CD");
+        }
+    }
+}
